@@ -9,3 +9,4 @@ lockfile==0.10.2
 progress==1.2
 ipaddress==1.0.7  # Only needed on 2.6, 2.7, and 3.2
 packaging==15.0
+retrying==1.3.3
