@@ -676,7 +676,7 @@ def unpack_http_url(link, location, download_dir=None, session=None):
 
     if not already_downloaded_path:
         os.unlink(from_path)
-    os.rmdir(temp_dir)
+    rmtree(temp_dir)
 
 
 def unpack_file_url(link, location, download_dir=None):
