@@ -9,6 +9,9 @@
 * Fix an issue where distutils installed projects were not actually uninstalled
   and deprecate attempting to uninstall them altogether.
 
+* Retry deleting directories incase a process like an antivirus is holding the
+  directory open temporarily.
+
 
 **6.0.7 (2015-01-28)**
 
